# brainstorm

./: .gitignore  Justfile  LICENSE  README.md  main.py  pyproject.toml
.zed/: settings.json
client/: .cta.json  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/.zed/: settings.json
client/app/: client.ts  root.tsx
client/app/routes/: home.tsx
client/app/welcome/: welcome.tsx
client/src/routes/: index.tsx
